samples/eventchain/invalid/task-history.verified
1|TaskCreated|taskId=new
2|TaskCreated|taskId=hello
